# PC-assistance

./: .gitignore  README.md  pyproject.toml
src/: langgraph.json
src/developer_chatbot/: chatbot.py  requirements.txt
src/developer_chatbot/utils/: nodes.py  prompt.py  state.py
src/english/: main.py  prompt.py
src/open_browser/: chatbot.py
src/open_browser/utils/: bookmark.py  nodes.py  prompt.py  state.py  tools.py
src/personal_helper/: chatbot.py
src/personal_helper/utils/: nodes.py  prompt.py  state.py
src/run_program/: chatbot.py
src/run_program/utils/: nodes.py  prompt.py  state.py  tools.py
src/streamlit_chat/: browser.py  chat.py  helper.py
