[project]
name = "AI"
version = "0.1.0"
description = "Build an AI assistants"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.9",
    "langchain-core>=0.3.59",
    "langchain-openai",
    "langgraph>=0.4.2",
    "jupyter",
    "python-dotenv",
    "rich",
    "langgraph-cli[inmem]"
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["english", "developer_chatbot", "open_browser"]

[tool.setuptools.package-dir]
"english" = "src/english"
"developer_chatbot" = "src/developer_chatbot"
"developer_chatbot" = "src/open_browser"

[tool.setuptools.package-data]
"*" = ["py.typed"]


